src/objects/Drug__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>IQVIAPSA-4650</description>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <label>Indication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Drugs</relationshipLabel>
        <relationshipName>Drugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Line_Value__c</fullName>
        <formula>IF(INCLUDES(Service_Lines__c, &apos;PVA&apos;),&apos;PVA&apos;,IF(ISBLANK(Service_Lines__c),&apos;&apos;,&apos;Not PVA&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Line Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Lines__c</fullName>
        <description>IQVIAPSA-3827</description>
        <label>Service Lines</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Lines</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <label>Therapeutic Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Therapy_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>containsLitrSrvcLine__c</fullName>
        <description>IQVIAPSA-4533</description>
        <formula>INCLUDES(Service_Lines__c, &apos;Literature&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contains Litr SrvcLine</label>
        <type>Checkbox</type>
    </fields>
    <label>Drug</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Drug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DRG_PSA_VR01_MandatoryField</fullName>
        <active>true</active>
        <description>IQVIAPSA-3827</description>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
ISNULL(Service_Lines__c)
)</errorConditionFormula>
        <errorMessage>Service Lines field cannot be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DRG_PSA_VR02_Program_Field_Is_Mandatory</fullName>
        <active>true</active>
        <description>IQVIAPSA-4698</description>
        <errorConditionFormula>AND(
 $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, ISBLANK( Program__c )
)</errorConditionFormula>
        <errorDisplayField>Program__c</errorDisplayField>
        <errorMessage>Program is not linked with Drug record, Please make sure each drug is linked with any program.</errorMessage>
    </validationRules>
</CustomObject>